# website/controllers/s3_file_tar.go
@@ -5,19 +5,18 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"www.github.com/dingsongjie/file-help/configs"
-	"www.github.com/dingsongjie/file-help/website/models/converter"
 	"www.github.com/dingsongjie/file-help/website/models/tar"
 )
 
 // @Security BearerAuth
-// GetFisrtImageByGavingKey
-// @Summary GetFisrtImageByGavingKey
-// @Description GetFisrtImageByGavingKey
-// @Tags GetFisrtImageByGavingKey
+// PackByGavingKey
+// @Summary PackByGavingKey
+// @Description PackByGavingKey
+// @Tags PackByGavingKey
 // @Accept json
 // @Produce json
-// @param request body converter.ConvertByGavingKeyRequest true "request"
-// @Success 200  {object} converter.ConvertByGavingKeyResponse
+// @param request body tar.PackRequest  true "request"
+// @Success 200  {object} models.CommandResponse
 // @Failure 400  {object} models.CommonErrorResponse
 // @Router /Tar/Pack [post]
 func Pack(c *gin.Context) {
@@ -25,10 +24,10 @@ func Pack(c *gin.Context) {
 	if err := c.BindJSON(&request); err != nil {
 		return
 	}
-	handler, err := converter.NewGetFisrtImageByGavingKeyRequestHandler(configs.S3Endpoint, configs.S3AccessKey, configs.S3SecretKey, configs.S3BacketName)
+	handler, err := tar.NewPackHandler(configs.S3Endpoint, configs.S3AccessKey, configs.S3SecretKey, configs.S3BacketName)
 	if err != nil {
 		c.AbortWithError(500, err)
 	}
-	GetFisrtImageByGavingKeyResponse := handler.Handle(&request)
-	c.JSON(http.StatusOK, GetFisrtImageByGavingKeyResponse)
+	response := handler.Handle(&request)
+	c.JSON(http.StatusOK, response)
 }
