# website/models/tar/pack.go
@@ -9,6 +9,9 @@ type PackRequest struct {
 }
 
 type PackRequestItem struct {
-	FileKey, FileName string
-	LastModifyTime    time.Time
+	FileKey string
+	// 文件夹层级用"/"表示
+	FileName string
+	// ISO 8601 时间
+	LastModifyTime time.Time
 }
